//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  username String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  profileImage String [not null]
  bio String
  reviews Review [not null]
  listening Listening [not null]
  listened Listened [not null]
  wantToListen WantToListen [not null]
  shelves Shelf [not null]
  followedBy Follows [not null]
  following Follows [not null]
  spotifyAccount String [default: '']
  lastFmAccount String [default: '']
  soundCloudAccount String [default: '']
  twitterAccount String [default: '']
}

Table Review {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  body String
  user User [not null]
  userId String [not null]
  Album Album [not null]
  albumId String [not null]
  rating Float [not null]
}

Table Album {
  id String [pk]
  uri String [unique, not null]
  spotifyId String [unique, not null]
  title String [not null]
  genre String
  year Int
  reviews Review [not null]
  listening Listening [not null]
  listened Listened [not null]
  wantToListen WantToListen [not null]
  images Image [not null]
  tracks Track [not null]
  artists Artist [not null]
  shelf Shelf [not null]
}

Table Artist {
  id String [pk]
  uri String [unique, not null]
  spotifyId String [unique, not null]
  name String [not null]
  albums Album [not null]
  tracks Track [not null]
}

Table Track {
  id String [pk]
  uri String [unique, not null]
  spotifyId String [unique, not null]
  title String [not null]
  trackNum Int [not null]
  duration Int [not null]
  previewUrl String
  album Album [not null]
  albumId String [not null]
  artists Artist [not null]
}

Table Image {
  id String [pk]
  url String [not null]
  height Int [not null]
  width Int [not null]
  album Album [not null]
  albumId String [not null]
}

Table Listening {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
  userId String [not null]
  album Album [not null]
  albumId String [not null]
}

Table Listened {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
  userId String [not null]
  album Album [not null]
  albumId String [not null]
}

Table WantToListen {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
  userId String [not null]
  album Album [not null]
  albumId String [not null]
}

Table Follows {
  follower User [not null]
  followerId String [not null]
  following User [not null]
  followingId String [not null]

  indexes {
    (followerId, followingId) [pk]
  }
}

Table Shelf {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  name String [not null]
  user User [not null]
  userId String [not null]
  albums Album [not null]
  public Boolean [not null, default: true]

  indexes {
    (name, userId) [unique]
  }
}

Table AlbumToArtist {
  artistsId String [ref: > Artist.id]
  albumsId String [ref: > Album.id]
}

Table AlbumToShelf {
  shelfId String [ref: > Shelf.id]
  albumsId String [ref: > Album.id]
}

Table ArtistToTrack {
  tracksId String [ref: > Track.id]
  artistsId String [ref: > Artist.id]
}

Ref: Review.userId > User.id

Ref: Review.albumId > Album.spotifyId

Ref: Track.albumId > Album.spotifyId

Ref: Image.albumId > Album.spotifyId

Ref: Listening.userId > User.id

Ref: Listening.albumId > Album.spotifyId

Ref: Listened.userId > User.id

Ref: Listened.albumId > Album.spotifyId

Ref: WantToListen.userId > User.id

Ref: WantToListen.albumId > Album.spotifyId

Ref: Follows.followerId > User.id

Ref: Follows.followingId > User.id

Ref: Shelf.userId > User.id